--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.6",
     "systemjs": "^0.19.27",
     "typescript": "^1.9.0-dev.20160504"
+  },
+  "devDependencies": {
+    "zone.js": "^0.6.12"
   }
 }
