--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "files": [
       "./1-states/app/main.ts",
       "./2-auto-styles/app/main.ts",
-      "./3-inbox/app/main.ts",
+      "./3-querying/src/animate_app.ts",
+      "./4-staggering/src/animate_app.ts",
       "./typings/es6-collections.d.ts",
       "./typings/es6-promise.d.ts"
     ],
